--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,23 @@
 <!doctype html>
 <html lang="en">
+  <!-- 
+  Let Me DuckDuckGo That For you
+  https://github.com/arithefirst/LMDT4U
+  Copyright (C) 2025 April Hall (arithefirst)
+
+  This program is free software: you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation, either version 3 of the License, or
+  (at your option) any later version.
+
+  This program is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License
+  along with this program.  If not, see <https://www.gnu.org/licenses/>. 
+  -->
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
